<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.jrobbins.dungeonmaker.DungeonParamsFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/textview_map_size"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="normal|bold"
            android:textAlignment="viewEnd" />
        <EditText
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/map_width"
            android:text="99"
            android:background="@android:color/darker_gray"
            android:layout_margin="8dp"/>
        <TextView
            android:text="@string/textview_x"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            />
        <EditText
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:text="49"
            android:id="@+id/map_height"
            android:background="@android:color/darker_gray"
            android:layout_margin="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/textview_room_tries"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="normal|bold"
            android:textAlignment="viewEnd"
            />
        <EditText
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:text="50"
            android:id="@+id/map_room_count"
            android:background="@android:color/darker_gray"
            android:layout_margin="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/textview_room_size"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="normal|bold"
            android:textAlignment="viewEnd"
            />
        <EditText
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="5"
            android:id="@+id/map_room_size"
            android:background="@android:color/darker_gray"
            android:layout_margin="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/textview_path_winding"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="normal|bold"
            android:textAlignment="viewEnd"
            />
        <EditText
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:text="50"
            android:id="@+id/map_path_winding"
            android:background="@android:color/darker_gray"
            android:layout_margin="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/textview_level"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="normal|bold"
            android:textAlignment="viewEnd"/>
        <EditText
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:text="2"
            android:id="@+id/map_level"
            android:background="@android:color/darker_gray"
            android:layout_margin="8dp"/>
    </LinearLayout>

     <RadioGroup
         android:text="@string/rad_group_title_output"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/rad_group_ouptput">
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/rad_view"
             android:text="@string/rad_view_on_device"
             android:textStyle="normal|bold"
             android:checked="true"/>
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/rad_mail"
             android:text="@string/rad_send_html_file"
             android:textStyle="normal|bold"/>
     </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_generate"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_generate">
            <requestFocus/>
        </Button>

    </LinearLayout>
</FrameLayout>
